--- a/src/sass/layout/_sublists-grid.sass
+++ b/src/sass/layout/_sublists-grid.sass
@@ -8,3 +8,13 @@
 
 .sublist-controls
   padding: 25px
+
+
+
+@media only screen and (max-width: 560px)
+  .sublists-grid
+    padding: 10px
+    margin-top: 35px
+
+  .sublist-controls
+    padding: 5px
