--- a/src/sass/layout/_task-form-grid.sass
+++ b/src/sass/layout/_task-form-grid.sass
@@ -4,3 +4,13 @@
   align-items: center
   justify-content: center
   grid-gap: 10px
+
+@media only screen and (max-width: 560px)
+  .task-form__grid
+    grid-gap: 5px
+    grid-template:  auto auto auto auto / 50% 50%
+
+
+@media only screen and (max-width: 400px)
+  .task-form__grid
+    grid-template-columns:  100%
