--- a/src/sass/modules/_list.sass
+++ b/src/sass/modules/_list.sass
@@ -2,10 +2,6 @@
   transition: .2s ease
   opacity: 0
 
-  &__panel-container
-    margin: 0 auto
-    max-width: 960px
-    text-align: right
   &__title
     text-align: center
     
